--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -48,3 +48,11 @@
 
 @include motion-ui-transitions;
 @include motion-ui-animations;
+
+// * * * * * * * * * * * * * * * * * * * *
+// My Styles
+// * * * * * * * * * * * * * * * * * * * *
+@import './partials/variables';
+@import './partials/base';
+@import './partials/nav';
+@import './partials/hero';
